<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/ystextmedium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/search_button"
        style="@style/MeinButtonStyle"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/media_button"
        style="@style/MeinButtonStyle"
        android:text="@string/media"
        app:icon="@drawable/library" />

    <Button
        android:id="@+id/settings_button"
        style="@style/MeinButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>