<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_marginBottom="22dp">

        <Button
            android:id="@+id/button_back"
            android:layout_weight="0.9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:drawableEnd="@drawable/arrow_back"
            android:gravity="start"
            android:drawableTint="@color/black"
            android:background="@android:color/transparent"
            android:outlineProvider="none"

/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="0.1"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9">



        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/black_them"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:contentDescription="TODO"
            android:paddingRight="8dp"
            android:textAllCaps="false"
            android:text="@string/set_black_them"
            android:textColor="@color/black"
            android:textSize="22sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9" >


        <TextView
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/share"
            android:gravity="center_vertical|start"
            android:maxLines="2"
            android:paddingEnd="8dp"
            android:text="@string/set_share_app"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9" >

        <TextView
            android:id="@+id/write_support"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/support"
            android:gravity="center_vertical|start"
            android:paddingEnd="8dp"
            android:text="@string/set_write_support"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9">

        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/arrow_forward"
            android:gravity="center_vertical|start"
            android:paddingEnd="8dp"
            android:text="@string/set_confirm_reg"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </LinearLayout>


</LinearLayout>