<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <ImageButton
        android:id="@+id/button_back"
        style="@style/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="?attr/colorSecondary"/>

    <ImageView
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/track_name"
        android:textSize="@dimen/FS22SP"
        android:fontFamily="@font/ystextmedium"
        android:textColor="?attr/colorOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DP24"
        android:layout_marginStart="@dimen/DP24"
        android:layout_marginEnd="@dimen/DP24"
        android:text="Yesterday (Remastered 2009)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder" />

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/DP24"
        android:fontFamily="@font/ystextmedium"
        android:text="The Beatles"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/FS14SP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/track_name"
        app:layout_constraintTop_toBottomOf="@+id/track_name" />

    <ImageButton
        android:id="@+id/collection"
        style="@style/collectionImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="54dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group"
        />

    <ImageButton
        android:id="@+id/play_button"
        style="@style/playImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:background="@android:color/transparent"
        android:drawableTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@+id/like_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/collection"
        app:layout_constraintTop_toBottomOf="@+id/group" />

    <ImageButton
        android:id="@+id/like_button"
        style="@style/likeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:drawableTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group" />

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ystextmedium"
        android:layout_marginTop="12dp"
        android:text="0:30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <TextView
        android:id="@+id/duration"
        style="@style/playerActivityText"
        android:layout_marginTop="84dp"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collection" />

    <TextView
        android:id="@+id/album"
        style="@style/playerActivityText"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

    <TextView
        android:id="@+id/year"
        style="@style/playerActivityText"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album" />

    <TextView
        android:id="@+id/genre"
        style="@style/playerActivityText"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />


    <TextView
        android:id="@+id/country"
        style="@style/playerActivityText"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre" />


    <TextView
        android:id="@+id/track_time"
        style="@style/playerActivityText_2"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="@dimen/FS16SP"
        android:text="5:35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/like_button" />

    <TextView
        android:id="@+id/track_album"
        style="@style/playerActivityText_2"
        android:text="Yesterday (Remastered 2009)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_time" />

    <TextView
        android:id="@+id/track_year"
        style="@style/playerActivityText_2"
        android:text="1965"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_album" />


    <TextView
        android:id="@+id/track_genre"
        style="@style/playerActivityText_2"
        android:text="Rock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_year" />


    <TextView
        android:id="@+id/track_country"
        style="@style/playerActivityText_2"
        android:text="Великобритания"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_genre" />





</androidx.constraintlayout.widget.ConstraintLayout>