<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.playlistmaker.ui.search.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/MessageTextStyle"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fontFamily="@font/ystextmedium"
            android:text="@string/search"
            android:textSize="@dimen/FS22SP" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_shape"
            android:drawableStart="@drawable/search"
            android:drawableTint="?attr/colorPrimaryVariant"
            android:drawablePadding="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:hint="@string/search"
            android:textColorHint="?attr/colorPrimaryVariant"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clear_search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/clear"
            android:layout_marginEnd="5dp"
            android:padding="8dp"
            android:visibility="invisible"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp">

        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="124dp"
            android:layout_marginStart="158dp"
            android:layout_marginEnd="158dp"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/history_text"
            style="@style/MessageTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/your_search"
            android:textSize="@dimen/FS19SP"
            android:gravity="center_horizontal"
            android:fontFamily="@font/ystextmedium"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_history_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="@dimen/DP85"
            android:visibility="visible"
            />

        <ImageView
            android:id="@+id/find_nothing_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/errorImage"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/find_nothing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_nothing"
            android:layout_marginTop="220dp"
            android:textSize="19sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ystextmedium"
            android:layout_marginStart="@dimen/DP24"
            android:layout_marginEnd="@dimen/DP24"
            android:layout_gravity="center_horizontal|top"
            android:visibility="invisible"
            />

        <ImageView
            android:id="@+id/net_error_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/netErrorImage"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/net_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_error"
            android:layout_marginTop="220dp"
            android:textSize="19sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ystextmedium"
            android:layout_marginStart="@dimen/DP24"
            android:layout_marginEnd="@dimen/DP24"
            android:gravity="center_horizontal|top"
            android:visibility="gone"
            />

        <ImageButton
            android:id="@+id/update_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="134dp"
            android:layout_marginEnd="134dp"
            android:layout_marginTop="334dp"
            android:background="?attr/colorSecondary"
            android:theme="@style/updateButton"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            />

        <ImageButton
            android:id="@+id/history_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="?attr/colorSecondary"
            android:src="@drawable/clear_history"
            android:layout_gravity="bottom|center_horizontal"
            android:visibility="invisible"
            />

    </FrameLayout>



</LinearLayout>